--- a/less/custom.less
+++ b/less/custom.less
@@ -105,6 +105,7 @@ header{
 			line-height: 1;
 			text-align: justify;
 			margin-top: 0px;
+			padding-bottom: 1px;
 			&:after{
 				content:                    ' ';
 				position:                   absolute;
@@ -204,6 +205,10 @@ header{
 }
 .results-list-container{
 		margin-top: 40px;
+		a{
+			text-decoration: none;
+			color: @black;
+		}
 
 }
 .results-list{
@@ -231,6 +236,7 @@ header{
 		text-overflow: ellipsis;
 		font-size: .95em;
 		line-height: 1;
+		padding-bottom: 1px;
 	}
 	hr{
 		margin: 8px 0 3px 0;
